[project]
name = "mlx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "llama-cpp-python>=0.3.16",
    "mlx-lm>=0.28.3",
    "mlx-vlm>=0.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
